--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "zeitgeist-ai:-the-autonomous-observer",
+  "name": "zeitgeist-ai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:vercel": "vercel dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "config": "./show-config.sh"
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
@@ -14,16 +16,20 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "reveal.js": "^5.2.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^22.14.0",
+    "@types/reveal.js": "^5.2.2",
+    "@vercel/node": "^5.5.26",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
+    "vercel": "^50.4.9",
     "vite": "^6.2.0"
   }
 }
