--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/[^.]+",
       "dest": "/index.html",
       "status": 200
