--- a/vercel.json
+++ b/vercel.json
@@ -18,5 +18,11 @@
       "dest": "/index.html",
       "status": 200
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/agent-cron",
+      "schedule": "0 */12 * * *"
+    }
   ]
 }
