--- a/vercel.json
+++ b/vercel.json
@@ -24,5 +24,10 @@
       "path": "/api/agent-cron",
       "schedule": "0 */12 * * *"
     }
-  ]
+  ],
+  "functions": {
+    "api/agent-cron.ts": {
+      "maxDuration": 60
+    }
+  }
 }
