--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/agent-cron",
-      "schedule": "0 */12 * * *"
+      "schedule": "0 2 * * *"
     }
   ],
   "functions": {
