--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev:vercel": "vercel dev",
     "build": "vite build",
     "preview": "vite preview",
-    "config": "./show-config.sh"
+    "config": "./show-config.sh",
+    "ollama:setup": "node scripts/setup-ollama.js setup",
+    "ollama:check": "node scripts/setup-ollama.js check",
+    "ollama:test": "node scripts/setup-ollama.js test"
   },
   "dependencies": {
     "@google/genai": "^1.35.0",
